--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -421,6 +421,7 @@
     max-width: 82.5vw;
     max-height: 53.5vh !important;
     padding-right: 2vw;
+    overflow-x: hidden;
   }
   .project-details::-webkit-scrollbar {
     width: .6vh;
